syntax = "proto3";

import "cloudstate/entity_key.proto";
import "google/api/annotations.proto";
import "google/api/httpbody.proto";

package cloudstate.samples.chat.chat;

message User {
    string user = 1 [(.cloudstate.entity_key) = true];
}

message ImgRequest {
    string user = 1 [(.cloudstate.entity_key) = true];
    string img = 2;
}


service Chat {
    rpc GetChatPage(User) returns (google.api.HttpBody) {
        option (google.api.http).get = "/pages/chat.html";
    }

    rpc GetBundleJs(User) returns (google.api.HttpBody) {
        option (google.api.http).get = "/pages/build/bundle.js";
    }

    rpc GetBundleImg(ImgRequest) returns (google.api.HttpBody) {
        option (google.api.http).get = "/pages/imgs/{img}";
    }
}
